syntax="proto3";
option csharp_namespace="Univoting.Services";
import	"messages.proto";

service LiveViewService{
rpc GetVotesForPosition(voteCountRequest) returns(voteCountResult);
rpc GetSkippedVoteForPosition(voteCountRequest) returns(voteCountResult);
rpc GetAllPositions(GetAllPositionsRequest) returns (AllPositionsResult);
}