syntax="proto3";
option csharp_namespace="Univoting.Services";



message voteCountRequest{
	string positionId=1; 
}

message voteCountResult{
	int64 count=1; 
}

message Position{
	string positionId=1;
	string positionName=2;
	string ElectionId=3;
}

message AllPositionsResult{
	repeated Position positions=1;
}

message AddVotersRequest{
repeated Voter voters=1;

}

message AddPositionsRequest{
repeated Position positions=1;
}




message AddCandidatesRequest{
	repeated Candidate Candidate=1;
}
message Candidate{
	string FirstName=1;
	string LastName=2;
	bytes Picture=3;
	string PoitionId=4;
	string RankId=5;
	string ElectionId=6;
}

message Voter{
	string Id=1;
	string Name=2;
	string IdentificationNumber=3;
	VotingStatus status=4;
	string ElectionId=5;
}

message AddElectionConfigurationRequest{
string Name=1;
string Description=2;
bytes Logo=3;
string BrandColour=4;

}

message AddModeratorsRequest{
	repeated Moderator Moderators=1;
}

message ServiceResponse{
	ResponseStatus ResponseStatus=1;
}

message Moderator{
string Name=1;
Badge Badge=2;
string ElectionId=3;
}

message GetAllPositionsRequest{
	string ElectionId=3;

}
enum VotingStatus{
	PENDING =0;
	INPROGRESS=1;
	VOTED=2;
}

enum Badge{
	SUPERVISOR=0;
	SENIOR=1;
	CHIEF=2;
}

enum ResponseStatus{
	SUCCESS=0;
	FAIL=1;
}



